--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>co.edu.uptc</groupId>
-	<artifactId>UptcList</artifactId>
+	<artifactId>diegoschi</artifactId>
 	<version>1.1</version>
 	<name>UptcList</name>
 	<properties>
